# builder

./: .gitignore  README.md  TEETH.md  _ab_run.sh  _ab_run_v5.sh  _add_contract.py  _await_then_shortener.sh  _deadlock_detector.py  _eventbus_fix_run.sh  _gate_audit.py  _iso_cachefix.sh  _iso_completeness.sh  _iso_report.sh  _iso_taskapipro.sh  _ledger_3arm.sh  _lrucache_fix_run.sh  _mutant_check.sh  _mutex_intra_run.sh  _named_test_audit.py  _ratelimit_fix_run.sh  _shortener_ab.sh  _snap_raw.sh  _sweep.sh  _teeth_suite.py  build_mixed_v4.py  build_mixed_v5.py  distill_onpolicy.jsonl  distill_prep.py  distill_train.jsonl  distill_train_2k.jsonl  distill_train_4k.jsonl  farm_traces.sh  harvest_traces.py  project_bench.py  pyproject.toml  score_backend.py  verify_corpus.py
examples/: jsonapi_modern.jsonl  servemux_modern.jsonl  verified_contracts.jsonl
logs/: FINDING-gate-mining.txt  FINDING-gate-negative-coverage.txt  FINDING-gate-soundness.txt  FINDING-mechanism-audit.txt  FINDING-taskflow-teeth.txt  PREDICTION-bitset-clear-fix.txt  PREDICTION-completeness.txt  PREDICTION-deadlock-gate.txt  PREDICTION-eventbus-fix.txt  PREDICTION-eventbus.txt  PREDICTION-jsonapi-fix.txt  PREDICTION-kvservice-content-type-fix.txt  PREDICTION-ledger.txt  PREDICTION-logstats-tiebreak-fix.txt  PREDICTION-lrucache-fix.txt  PREDICTION-lrucache.txt  PREDICTION-mutex-intra.txt  PREDICTION-ratelimit-fix.txt  PREDICTION-ratelimit.txt  PREDICTION-taskapipro-sort-fix.txt  PREDICTION-taskapipro.txt  PREDICTION-taskflow-sort-fix.txt  PREDICTION-taskflow-status-fix.txt  PREDICTION-walkv-delete-fix.txt  (+3 more)
(+186 files in other folders)
