[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guildlm-builder"
version = "0.1.0"
description = "GuildLM Builder — an agentic Go project generator with compile/test feedback."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
guildlm-build = "src.builder:app"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
